--- a/templates/arrows.html
+++ b/templates/arrows.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -7,7 +8,6 @@
 /*Python script shall return on AJAX request, a complete drawarrow function, and shall then run drawcanvas funciton*/
 phasors = {};
 window.onload = function() {
-   alert("window loaded");
    scale = 1;
    canvas = document.getElementById("c");
    ctx = canvas.getContext("2d");
@@ -53,7 +53,6 @@ window.onresize = function() {
 	drawcanvas();
 }
 
-   
 function resizecanvas() {
   window_width = document.documentElement.clientWidth;
   window_height = document.documentElement.clientHeight;
@@ -89,7 +88,7 @@ function drawcanvas() {
 function drawarrow(ctx) {
   //canvas_arrow(ctx, 0, 0, 290, -290);
   for (var i = 0; i < Object.keys(phasors).length; i++) {
-		canvas_arrow(0, 0, phasors[i][1], -phasors[i][2], phasors[i][3])
+		canvas_arrow(phasors[i][4], -phasors[i][5], phasors[i][4]+phasors[i][1], -phasors[i][5]-phasors[i][2], phasors[i][3], phasors[i][0])
   }
 }
 
@@ -116,9 +115,14 @@ function zoomout() {
 }
 
 function restore() {
+  clearcanvas();
+  scale = 1.0/ctx.getTransform()['a'];
+  ctx.scale(scale, scale);
+  drawcanvas();
   
 }
-function canvas_arrow(fromx, fromy, tox, toy, color) {
+function canvas_arrow(fromx, fromy, tox, toy, color, label) {
+  if (!label) label = '';
   var headlen = 10; // length of head in pixels
   var dx = tox - fromx;
   var dy = toy - fromy;
@@ -131,20 +135,81 @@ function canvas_arrow(fromx, fromy, tox, toy, color) {
   ctx.lineTo(tox - headlen * Math.cos(angle - Math.PI / 6), toy - headlen * Math.sin(angle - Math.PI / 6));
   ctx.moveTo(tox, toy);
   ctx.lineTo(tox - headlen * Math.cos(angle + Math.PI / 6), toy - headlen * Math.sin(angle + Math.PI / 6));
+  //draw_label(label, {x:fromx, y:fromy}, {x:tox, y:toy});
   console.log("drew in "+color);
   ctx.stroke();
+  ctx.fillStyle = color;
+  draw_label(label, {x:fromx, y:fromy}, {x:tox, y:toy});
+}
+
+function draw_label(text, p1, p2){
+		var alignment = 'center';
+		var padding = 3;
+		
+		var dx = p2.x - p1.x;
+		var dy = p2.y - p1.y;
+		var len = Math.sqrt(dx*dx+dy*dy);
+		var avail = len - 2*padding;
+		
+		
+		var textToDraw = text;
+		
+		/*if (ctx.measureText && ctx.measureText(textToDraw).width > avail){
+			while (textToDraw && ctx.measureText(textToDraw+"…").width > avail) textToDraw = textToDraw.slice(0,-1);
+			textToDraw += "…";
+		}*/
+
+		// Keep text upright
+		var angle = Math.atan2(dy,dx);
+		if (angle < -Math.PI/2 || angle > Math.PI/2){
+			var p = p1;
+			p1 = p2;
+			p2 = p;
+			dx *= -1;
+			dy *= -1;
+			angle -= Math.PI;
+		}
+		
+		var p, pad;
+		if (alignment=='center'){
+			p = p1;
+			pad = 1/2;
+		} 
+		ctx.save();
+//		ctx.fillStyle = '#666';
+		ctx.font  = '14pt'+' Arial';
+		ctx.textAlign = alignment;
+		ctx.translate(p.x+dx*pad,p.y+dy*pad);
+		ctx.rotate(angle);
+		ctx.fillText(textToDraw,0,0);
+		ctx.restore();
+}
+	
+function updatephasortable() {
+    tablehtml = "<table class=\"table\"><thead class=\"thead-dark\"><tr><th scope=\"col\">Phasor Name</th><th scope=\"col\">Rectangular Form</th><th scope=\"col\">Polar Form</th><th scope=\"col\">Color</th></tr></thead><tbody>";
+	for (var i = 0; i < Object.keys(phasors).length; i++) {
+		//canvas_arrow(phasors[i][4], -phasors[i][5], phasors[i][4]+phasors[i][1], -phasors[i][5]-phasors[i][2], phasors[i][3], phasors[i][0])
+		tablehtml += "<tr><th scope=\"row\">"+phasors[i][0]+"</th><td>";
+		var representation = phasors[i][0]+" = "+Math.round(phasors[i][6]*100000)/100000;
+			if (phasors[i][7] > 0) {
+				representation += " + j"+Math.round(phasors[i][7]*100000)/100000;
+			} else {
+				representation += " - j"+Math.abs(Math.round(phasors[i][7]*100000)/100000);
+			}
+		tablehtml += representation+"</td><td>";
+		var anginr = Math.atan(phasors[i][7]/phasors[i][6])
+		var representation = "Magnitude: " + Math.round(Math.pow(Math.pow(phasors[i][6], 2) + Math.pow(phasors[i][7], 2), 0.5)*100000)/100000 +", Phase (deg): "+Math.round((anginr*180/Math.PI)*10000)/10000+", Phase (rad): "+ Math.round(anginr*10000)/10000+ " = "+ Math.round((anginr/Math.PI)*1000)/1000+"*PI";
+		tablehtml += representation+"</td><td>";
+		tablehtml += phasors[i][3]+"</td></tr>";
+    }
+	tablehtml += "</tbody></table>";
+	document.getElementById("phasorstable").innerHTML = tablehtml;
 }
 
 function processreq(cmd) {
-    /*
-    var name = document.getElementById("name");
-    var message = document.getElementById("message");
-
-    var entry = {
-      name: name.value,
-      message: message.value
-    };*/
-    fetch('/reqprocess', {
+	usercmd = document.getElementById('commanddata').value;
+	if ((usercmd.includes("=")) || (usercmd.includes("del")) || (usercmd.includes("col")) || (usercmd.includes("erase")) || (usercmd.includes("draw"))) {
+	  fetch('/reqprocess', {
       method: "POST",
       credentials: "include",
       body: JSON.stringify(document.getElementById("commanddata").value),
@@ -152,7 +217,7 @@ function processreq(cmd) {
       headers: new Headers({
         "content-type": "application/json"
       })
-    })
+	  })
       .then(function (response) {
         if (response.status !== 200) {
           console.log(`Looks like there was a problem. Status code: ${response.status}`);
@@ -162,16 +227,37 @@ function processreq(cmd) {
 		    keys = Object.keys(data);
 			phasors = {}
             for (var i = 0; i < keys.length; i++) {
-			    phasors[i] = [data[i].name, data[i].x, data[i].y, data[i].color];
+			    phasors[i] = [data[i].name, data[i].x, data[i].y, data[i].color, data[i].xbegin, data[i].ybegin, data[i].real, data[i].imag];
 			}
+			document.getElementById('commandhist').value+= document.getElementById('commanddata').value+'\n';
 			document.getElementById('commanddata').value="";
 			clearcanvas();
-            drawcanvas();			
+            drawcanvas();
+            updatephasortable();			
         });
-      })
-      .catch(function (error) {
-        console.log("Fetch error: " + error);
-      });
+       })
+       .catch(function (error) {
+         console.log("Fetch error: " + error);
+       });
+	} else {
+		var phname = usercmd.trim();
+		for (i = 0; i < Object.keys(phasors).length; i++) {
+			if (phname == phasors[i][0]) {
+				console.log(i);
+				var representation = phasors[i][0]+" = "+Math.round(phasors[i][6]*100000)/100000;
+				if (phasors[i][7] > 0) {
+					representation += " + j"+Math.round(phasors[i][7]*100000)/100000;
+				} else {
+					representation += " - j"+Math.abs(Math.round(phasors[i][7]*100000)/100000);
+				}
+				var anginr = Math.atan(phasors[i][7]/phasors[i][6])
+				representation += " = Magnitude: " + Math.round(Math.pow(Math.pow(phasors[i][6], 2) + Math.pow(phasors[i][7], 2), 0.5)*100000)/100000 +", Phase (deg): "+Math.round((anginr*180/Math.PI)*10000)/10000+", Phase (rad): "+ Math.round(anginr*10000)/10000+ " = "+ Math.round((anginr/Math.PI)*1000)/1000+"*PI";
+				document.getElementById('shortans').innerHTML = representation;
+				document.getElementById('commandhist').value+= document.getElementById('commanddata').value+'\n';
+			    document.getElementById('commanddata').value="";
+			}  
+	    }
+    }		
 }
 </script>
 </head>
@@ -184,11 +270,30 @@ function processreq(cmd) {
   <button onclick="zoomin()" class="btn btn-dark">+</button>
   <button onclick="zoomout()" class="btn btn-dark ml-1 mr-1">-</button>
   <button onclick="restore()" class="btn btn-dark ml-1 mr-1">100%</button>
-  <br /></div></div>
-  <div class="col-12 col-md-6">
-  <div class="row"><label for="commanddata" class="">Enter Commands Here (Enter new commands on new line): </label></div>
-  <div class="row"><div class="col-md-10 col-12"><textarea class="form-control text-white bg-dark" id="commanddata" rows="2"></textarea></div></div>
-  <div class="row"><div class="col-md-4 col-6"><button onclick="processreq()" class="btn btn-primary">Submit</button></div></div></div>
+  <button class="btn btn-secondary ml-1 mr-1" data-toggle="collapse" href="#cmdlist" role="button" aria-expanded="false" aria-controls="cmdlist">First Time?</button>
+  <button class="btn btn-secondary  ml-1 mr-1" type="button" data-toggle="collapse" data-target="#first-time" aria-expanded="false" aria-controls="first-time">Complete Guide</button>
+  <div class="collapse" id="first-time">
+  <div class="card card-body">
+    two pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
   </div>
+  </div>
+  <div class="collapse" id="cmdlist">
+  <div class="card card-body">
+    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+  </div>
+  </div>
+  <br /></div></div>
+  
+  <div class="row"><label for="commanddata" class="ml-3">Enter Commands Here (Enter new commands on new line): </label></div>
+  <div class="row"><div class="col-md-6 col-12"><textarea class="form-control text-white bg-dark" id="commanddata" rows="2"></textarea></div></div>
+  <div class="row"><div class="col-md-8 col-12"><p id="shortans" style="display:inline" class="text-light bg-secondary"></p></div></div>
+  <div class="row mt-1 mb-1"><div class="col-md-6 col-12">
+    <button onclick="processreq()" class="btn btn-primary ml-1 mr-1">Submit</button>
+    <button class="btn btn-secondary ml-1 mr-1" data-toggle="collapse" href="#phasorstable" role="button" aria-expanded="false" aria-controls="phasorstable">Details of all phasors</button>
+	<button class="btn btn-secondary  ml-1 mr-1" type="button" data-toggle="collapse" data-target="#commandhist" aria-expanded="false" aria-controls="commandhist">Toggle Command History</button></div></div></div>
+  <div class="collapse col-md-6 col-12 ml-2" id="phasorstable">
+  
+  </div>
+  <div class="row ml-2"><div class="col-md-6 col-12"><textarea class="form-control text-black bg-light" id="commandhist" rows="2"></textarea></div></div>
   
 </body>
